[tool.poetry]
name = "aldangold_brain_games"
version = "0.1.0"
description = ""
authors = ["aldangold <meloshnikoff@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "ppt"
url = "https://test.pypi.org/legacy/"
